Fixed overflow for searching tags hiding behind other elements.

--- a/static/assets/css/my-style.css
+++ b/static/assets/css/my-style.css
@@ -10,6 +10,10 @@
     object-fit: cover;
 }
 
+#search {
+    overflow: visible !important;
+}
+
 #search, #register {
     text-align:center;
 }
